kube/ckad-1/app-stack.yaml
kind: Pod
apiVersion: v1
metadata:
    name: frontend
    namespace: app-stack
    labels:
        app: todo
        tier: frontend
spec:
    containers:
    - name: frontend
      image: nginx
      ports:
      - containerPort: 80
---
kind: Pod
apiVersion: v1
metadata:
    name: backend
    namespace: app-stack
    labels:
        app: todo
        tier: backend
spec:
    containers:
    - name: backend
      image: nginx
      ports:
      - containerPort: 80
---
kind: Pod
apiVersion: v1
metadata:
    name: database
    namespace: app-stack
    labels:
        app: todo
        tier: database
spec:
    containers:
    - name: database
      image: mysql
      ports:
      - containerPort: 80
