kube/ckad-1/complex-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: complex-pod
  name: complex-pod
spec:
  containers:
  - image: nginx
    name: complex-pod
    ports:
    - containerPort: 80
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
