kube/ckad-1/consumer.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: consumer
  name: consumer
  namespace: ckad
spec:
  volumes:
  - name: secret-vol
    secret:
      secretName: ext-service-secret
  containers:
  - image: nginx
    name: consumer
    resources: {}
    volumeMounts:
    - name: secret-vol
      mountPath: /var/app
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
