kube/ckad-1/data-exchange.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: data-exchange
  name: data-exchange
spec:
  volumes:
  - name: data-vol
    emptyDir: {}

  containers:
  - name: sidecar
    image: busybox 
    command: [ "/bin/sh", "-c", " while true; do ls -l var/app/data/ | wc -l; sleep 5;done " ]
    volumeMounts:
    - name: data-vol
      mountPath: /var/app/data/
  - args:
    - /bin/sh
    - -c
    - 'index=1;  
                echo $index;
                while true; 
                  echo "Index : $index"; 
                  do touch /var/app/data/$index-data.txt;
                  index=$((index+1));
                  sleep 5;
                done'
    image: busybox
    name: data-exchange
    resources: {}
    volumeMounts:
    - name: data-vol
      mountPath: /var/app/data/
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
