kube/ckad-1/nginx.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2022-12-20T15:51:59Z"
    labels:
      run: busybox
    name: busybox
    namespace: ckad
    resourceVersion: "929308"
    uid: 3e63d151-5cb0-4c49-8643-d7dd9b407924
  spec:
    containers:
    - args:
      - sh
      - -c
      - while true; do sleep; done
      image: busybox
      imagePullPolicy: Always
      name: busybox
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-5rd4n
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: anto-vm
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-5rd4n
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:51:59Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:52:03Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:52:03Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:51:59Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://1b3f7e0032f7281332556dca09bfcccd55fd234828d31f0f0037ade90b2f9c5c
      image: docker.io/library/busybox:latest
      imageID: docker.io/library/busybox@sha256:3b3128d9df6bbbcc92e2358e596c9fbd722a437a62bafbc51607970e9e3b8869
      lastState: {}
      name: busybox
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2022-12-20T15:52:03Z"
    hostIP: 10.0.2.15
    phase: Running
    podIP: 10.0.0.157
    podIPs:
    - ip: 10.0.0.157
    qosClass: BestEffort
    startTime: "2022-12-20T15:51:59Z"
- apiVersion: v1
  kind: Pod
  metadata:
    creationTimestamp: "2022-12-20T15:49:10Z"
    labels:
      run: nginx
    name: nginx
    namespace: ckad
    resourceVersion: "929151"
    uid: 4010b050-9b55-4657-9208-f2f14406f384
  spec:
    containers:
    - image: nginx:1.17.10
      imagePullPolicy: IfNotPresent
      name: nginx
      ports:
      - containerPort: 80
        protocol: TCP
      resources: {}
      terminationMessagePath: /dev/termination-log
      terminationMessagePolicy: File
      volumeMounts:
      - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
        name: kube-api-access-bzrgk
        readOnly: true
    dnsPolicy: ClusterFirst
    enableServiceLinks: true
    nodeName: anto-vm
    preemptionPolicy: PreemptLowerPriority
    priority: 0
    restartPolicy: Always
    schedulerName: default-scheduler
    securityContext: {}
    serviceAccount: default
    serviceAccountName: default
    terminationGracePeriodSeconds: 30
    tolerations:
    - effect: NoExecute
      key: node.kubernetes.io/not-ready
      operator: Exists
      tolerationSeconds: 300
    - effect: NoExecute
      key: node.kubernetes.io/unreachable
      operator: Exists
      tolerationSeconds: 300
    volumes:
    - name: kube-api-access-bzrgk
      projected:
        defaultMode: 420
        sources:
        - serviceAccountToken:
            expirationSeconds: 3607
            path: token
        - configMap:
            items:
            - key: ca.crt
              path: ca.crt
            name: kube-root-ca.crt
        - downwardAPI:
            items:
            - fieldRef:
                apiVersion: v1
                fieldPath: metadata.namespace
              path: namespace
  status:
    conditions:
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:49:10Z"
      status: "True"
      type: Initialized
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:49:24Z"
      status: "True"
      type: Ready
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:49:24Z"
      status: "True"
      type: ContainersReady
    - lastProbeTime: null
      lastTransitionTime: "2022-12-20T15:49:10Z"
      status: "True"
      type: PodScheduled
    containerStatuses:
    - containerID: containerd://198461af11d62739795dfcead4e36ce330b1e2813f514d523c863a02e82bc50b
      image: docker.io/library/nginx:1.17.10
      imageID: docker.io/library/nginx@sha256:6fff55753e3b34e36e24e37039ee9eae1fe38a6420d8ae16ef37c92d1eb26699
      lastState: {}
      name: nginx
      ready: true
      restartCount: 0
      started: true
      state:
        running:
          startedAt: "2022-12-20T15:49:23Z"
    hostIP: 10.0.2.15
    phase: Running
    podIP: 10.0.0.158
    podIPs:
    - ip: 10.0.0.158
    qosClass: BestEffort
    startTime: "2022-12-20T15:49:10Z"
kind: List
metadata:
  resourceVersion: ""
