kube/ckad-1/security-context-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: security-context-demo
  name: security-context-demo
spec:
  containers:
  - image: alpine
    name: security-context-demo
    securityContext:
      capabilities: 
        add: [ "CAP_SYS_TIME" ]
    resources: {}
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
