kube/ckad-1/web-server.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: web-server
  name: web-server
spec:
  containers:
  - image: nginx
    name: web-server
    ports:
    - containerPort: 80
    resources: {}
    livenessProbe:
      httpGet:
        port: 80
        path: /
      initialDelaySeconds: 10
      periodSeconds: 30
    readinessProbe:
      httpGet:
        port: 80 
        path: /
      initialDelaySeconds: 5
    startupProbe:
      httpGet:
        path: /
        port: 80    
  dnsPolicy: ClusterFirst
  restartPolicy: Never
status: {}
